# aus-fuel-forecaster

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  spec.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
data/static/: brand_aliases.csv  crisis_events.csv  nsw_school_terms.csv
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_explainability.ipynb
src/fuel_pred/: __init__.py  config.py
src/fuel_pred/clean/: __init__.py  fuelcheck.py  traffic.py
src/fuel_pred/evaluate/: __init__.py  compare.py  metrics.py
src/fuel_pred/fetch/: __init__.py  _ckan.py  _rba.py  aip_tgp.py  asx200.py  audusd.py  brent.py  cash_rate.py  consumer_confidence.py  fuelcheck.py  inflation_expectations.py  seifa.py  traffic.py  weather.py
src/fuel_pred/spatial/: __init__.py  nearest.py  resolve_addrs.py
src/fuel_pred/train/: __init__.py  _fit.py  feature_blocks.py  folds.py  train_models.py
tests/: conftest.py  test_build_enrich_census.py  test_build_make_features.py  test_build_panel_grid.py  test_clean_fuelcheck.py  test_clean_traffic.py  test_evaluate_compare.py  test_features.py  test_fetch_aip_tgp.py  test_fetch_asx200.py  test_fetch_audusd.py  test_fetch_brent.py  test_fetch_cash_rate.py  test_fetch_fuelcheck.py  test_fetch_inflation_expectations.py  test_fetch_seifa.py  test_fetch_traffic.py  test_fetch_weather.py  test_metrics.py  test_spatial_nearest.py  test_spatial_resolve_addrs.py  test_train_feature_blocks.py  test_train_folds.py  test_train_models.py
tools/: README.md  make_notebooks.py  upstream_issue_dataset_spec_drift.md  upstream_issue_gcp_preset_collision.md  verify_real_enrich.py  verify_real_fetches.py  verify_real_geocode.py  verify_real_weather.py
