[project]
name = "fuel-pred"
version = "0.1.0"
description = "NSW fuel price prediction with SA2 census augmentation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "cauldnz" }]

dependencies = [
    # Data
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    # Network
    "requests>=2.32",
    "tenacity>=8.2",
    "yfinance>=0.2.40",
    # Excel reading — the RBA F11.1 historical periods (1983-2022) are
    # only published as legacy .xls files, so xlrd is required by
    # fetch.audusd. NSW FuelCheck publishes most monthly archives as .xlsx,
    # which pandas reads via openpyxl. Spec hint claimed CSVs throughout;
    # reality differs for both feeds.
    "xlrd>=2.0",
    "openpyxl>=3.1",
    # Calendar
    "holidays>=0.50",
    # ML
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "shap>=0.46",
    # Geospatial
    "shapely>=2.0",
    # Plotting (notebooks pull this in)
    "matplotlib>=3.8",
    # The augmentor itself
    "abs-census-augmentor @ git+https://github.com/cauldnz/abs-census-augmentor.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
    "types-requests",
]
notebooks = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "plotly>=5.20",
]

[project.scripts]
# CLI entrypoints are provided by `python -m fuel_pred.<module>`; this section
# is intentionally left for future top-level scripts.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required by hatchling because our `abs-census-augmentor` dep is a direct
# git URL reference. Without this, `uv sync` fails with
# "Dependency #N cannot be a direct reference".
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fuel_pred"]

# ----------------------------- Tooling configuration -----------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Don't descend into Claude Code's worktree scratch space. Each entry
# under .claude/worktrees/ is an independent git checkout (often on a
# different branch with stale code + an older pyproject.toml), and
# linting them: (a) duplicates findings against files that aren't on
# main, (b) uses the wrong rule config because ruff picks up nested
# pyproject.toml files. Same reasoning for .git/ which ruff already
# excludes by default.
extend-exclude = [".claude/"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle, pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "ANN",              # type annotations
]
ignore = [
    # ANN101 (missing self) and ANN102 (missing cls) were removed from
    # ruff in v0.7+; we used to list them here but ruff now warns that
    # the ignore is a no-op.
    "ANN401",           # allow Any in some narrow cases
    # Ambiguous-unicode rules (RUF001/002/003) exist primarily to catch
    # homoglyph attacks in identifiers. They produce a steady stream of
    # false positives in this repo's English-language prose, where
    # `×` (multiplication sign), `−` (minus sign), `→` (rightwards arrow)
    # etc. are typographically correct in chart titles, docs, and
    # markdown cells. Cost outweighs benefit for our threat model.
    "RUF001",           # ambiguous-unicode-character-string
    "RUF002",           # ambiguous-unicode-character-docstring
    "RUF003",           # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]   # tests don't need full typing
# Match both .py and .ipynb under notebooks/ — ruff lints notebooks
# natively. Notebook cells mix exploratory code with markdown; E501
# is meaningless for markdown content (line breaks change rendering),
# so we relax it alongside ANN.
"notebooks/**" = ["ANN", "E501"]
# tools/ holds spike scripts and notebook generators (e.g.
# make_notebooks.py emits markdown cells as inline strings). E501 there
# would force unreadable concatenations of prose content.
"tools/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true   # for libs without stubs
exclude = ["notebooks/", "build/", "dist/", "\\.claude/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow",
    "integration: requires live network (opt-in, not run in CI)",
]
